Improve error when JVM 11 can't access required modules
Patch by Gus Heck; reviewed by Sam Tunnicliffe for CASSANDRA-15468